--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -118,13 +118,24 @@
 
 .filter-list {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     margin-top: 0;
     margin-bottom: 50px;
     padding-left: 0;
 
     list-style: none;
     text-decoration: none;
+    @include mq(tablet) {  
+        justify-content: center;
+        flex-wrap: nowrap;
+
+    }
+
+    @include mq(desktop) {
+        
+
+    }
 }
 
 .filter-list__item {
@@ -134,6 +145,8 @@
 }
 
 .filter-list__btn {
+    margin-bottom: 15px;
+
     padding: 6px 22px;
     
     font-family: inherit;
@@ -160,6 +173,18 @@
         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
                     0px 1px 2px rgba(0, 0, 0, 0.08),
                     0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
+
+    @include mq(tablet) {
+
+        margin-bottom: 0;
+
+    }
+
+    @include mq(desktop) {
+
+        
+
     }
 }
 
