--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -7,6 +7,8 @@
     width: 100%;
     height: 100%;
 
+    z-index: 1010;
+
 // padding: 50px 30px;
 // overflow-y: scroll;
 
@@ -28,8 +30,11 @@
     
     transform: translate(-50%, -50%);
     
-    width: 528px;
+    
+    // width: 528px;
     /* height: 521px; */
+    
+
     background-color: #ffffff;
     border-radius: 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -38,14 +43,23 @@
                 
     transition: transform var(--animation), opacity var(--animation);           
     
-    // @media screen and (min-width: 600px) {
-    //     position: absolute;
-    //     top: 50%;
-    //     left: 50%;
-    //     transform: translate(-50%, -50%);
-    //     max-width: 500px;
-    //     width: 100%;   
+    width: 90%;
+
+    @include mq(mobile) {
+        width: 100%;
+        max-width: 450px;
+        
+    }
+
+    // @include mq(tablet) {
+        
     // }
+
+    @include mq(desktop) {
+       max-width: 528px;
+        
+    }
+
 }
 
 /* Start */
@@ -70,7 +84,7 @@
 .contact-form {
     padding: 40px;
     margin: 0;
-    width: 528px;
+
 }
 
 .form-title {   
@@ -176,8 +190,13 @@
 .form-check {
     display: inline-flex;
     align-items: center;
-
+    flex-direction: column;
     margin-bottom: 30px;
+
+    @include mq(mobile) {
+        flex-direction: row;
+        
+    }
 }
 
 .checkbox {
@@ -200,7 +219,7 @@
     display: inline-flex;
     align-items: center;
     padding: 0;
-    /* outline: 1px solid palevioletred; */
+    // outline: 1px solid palevioletred;
 }
 
 .icon-check {
@@ -217,23 +236,53 @@
 .check-title {
     margin-right: 6px;
 
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.17;
 
     letter-spacing: 0.03em;
 
     color: #757575;
+
+    @include mq(mobile) {
+        
+        
+    }
+
+    // @include mq(tablet) {
+        
+    // }
+
+    @include mq(desktop) {
+        font-size: 14px;
+        line-height: 1.71;
+        
+    }
 }
 
 .link-label {
-    font-size: 14px;
-    line-height: 1.71;
-    width: 100%;
+    font-size: 12px;
+    line-height: 1.17;
+    // width: 100%;
 
     letter-spacing: 0.03em;
     text-decoration-line: underline;
 
     color: var(--accent-cl);
+
+    @include mq(mobile) {
+        
+        
+    }
+
+    // @include mq(tablet) {
+        
+    // }
+
+    @include mq(desktop) {
+        font-size: 14px;
+        line-height: 1.71;
+        
+    }
 }
 
 // Footer form
