--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -31,6 +31,132 @@
     fill: currentColor;
 }
 
+//  HEADER SOC
+
+.header-social {
+    display: flex;
+    // flex-wrap: wrap;
+
+    // margin: 0%;
+    // padding: 0%;
+    & .social-link {
+        display: block;
+        // display: flex;
+        // justify-content: flex-start;
+
+        margin-left: 40px;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 1.22;
+
+        letter-spacing: 0.02em;
+
+        color: #2196F3;
+
+        
+
+        text-decoration: none;
+        
+        
+
+        
+    }
+
+    &.socials-item + &.socials-item::before {
+        content: "";
+        width: 1px;
+        height: 22px;
+        margin-left: 10px;
+        margin-right: 10px;
+        color: var(--accent-cl);
+    }
+
+
+    @include mq(tablet) {
+        display: none;
+        
+        
+    }
+    
+    @include mq(desktop) {
+       
+    }
+}
+
+.header-social__item {
+    position: relative;
+
+    &:not(:first-child) {
+        margin-left: 20px;
+    }
+
+    &::after {
+        display: block;
+
+        position: absolute;
+        content:" ";
+
+        top: 10px;
+        left: -20px;
+
+        width: 22px;
+        height: 1px;
+        color: var(--accent-cl);
+
+        transform: rotate(90deg);
+    }
+        
+}
+
+.header-social__item:first-child::after {
+    display: none;
+}
+
+
+.header-social__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: var(--accent-cl);
+    cursor: pointer;
+}
+
+// .header-social .socials-item {
+//     display: flex;
+//   margin: 0;
+//   padding: 0%;
+//   color: var(--accent-cl);
+
+  
+// }
+
+// .header-social .socials-item:not(:last-child):after {
+//     content: " ";
+//     width: 1px;
+//     height: 22px;
+//     margin-left: 10px;
+//     margin-right: 10px;
+//     background-color: rgba(33, 33, 33, 0.2);
+// }
+
+// .header-social .social-link {
+//     margin: 0;
+//   padding: 0;
+
+//   font-weight: 500;
+//   font-size: 18px;
+//   line-height: 1.22;
+
+//   letter-spacing: 0.02em;
+//   color: $accent-color;
+//   margin-right: 5px;
+// }
+// .social-link__name {
+    
+// }
+
+
 /* Join Group */
 
 .join-group {
