--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,34 +1,53 @@
 /* -- HERO -- */
 
 .hero {
+    height: 600px;
+    max-width: 1600px;
+
+    margin-left: auto;
+    margin-right: auto;
+    
     padding-top: 200px;
     padding-bottom: 200px;
          
     text-align: center;
     background-color: var(--dark-bg-cl);
-    background-image: linear-gradient(
-        to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/background/hero-s.jpg);
+    
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    margin-left: auto;
-    margin-right: auto;
-    height: 600px;
-    max-width: 1600px;
+    
+    background-image: url(../../images/background/hero-s.jpg),
+    linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    
+    @include mq(retina) {
+        background-image:
+        url(../../images/background/hero-s@2x.jpg),
+        linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));        
+    }
 
     @include mq(tablet) {
-        background-image: linear-gradient(
-        to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/background/hero-m.jpg);
-       
+        background-image:
+        url(../../images/background/hero-m.jpg),
+        linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+
+        @include mq(retina) {        
+            background-image:
+            url(../../images/background/hero-m@2x.jpg),
+            linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+        }       
     }
     
     @include mq(desktop) {
-        background-image: linear-gradient(
-        to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/background/hero-l.jpg);
-        
+        background-image: 
+        url(../../images/background/hero-l.jpg),
+        linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+
+        @include mq(retina) {        
+            background-image:
+            url(../../images/background/hero-l@2x.jpg),
+            linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));            
+        }        
     }
 }
 
