--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -3,8 +3,50 @@
 /* Project Card */
 
 .proj-list {
-    display: flex;
-    flex-wrap: wrap;
+    // display: flex;
+    // flex-wrap: wrap;
+    margin: -15px;
+
+    @include mq(tablet) {
+
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+
+    }
+
+    @include mq(desktop) {
+
+        // display: flex;
+        // flex-wrap: nowrap;
+
+    }
+}
+
+.proj-list__item {
+    margin: 15px;
+    // width: 370px;
+    // margin-right: 30px;
+    // margin-bottom: 30px;
+
+    // &:nth-child(3n) {
+    //     margin-right: 0;
+    // }
+
+    // &:nth-last-child(-n+3) {
+    //     margin-bottom: 0px;
+    // }
+    @include mq(tablet) {  
+        flex-basis: calc((100% - 2*30px) / 2);
+        justify-content: flex-start;
+
+    }
+
+    @include mq(desktop) {
+        flex-basis: calc((100% - 3*30px) / 3);
+
+
+    }
 }
 
 .proj-list__link {
@@ -24,19 +66,7 @@
     }
 }
 
-.proj-list__item {
-    width: 370px;
-    margin-right: 30px;
-    margin-bottom: 30px;
 
-    &:nth-child(3n) {
-        margin-right: 0;
-    }
-
-    &:nth-last-child(-n+3) {
-        margin-bottom: 0px;
-    }
-}
 
 .thumb {
     position: relative;
