--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,51 +1,68 @@
 /* -- TEAM -- */
 
 .team {
-    // padding-top: 94px;
-    // padding-bottom: 94px;
-    // justify-content: center;
+    padding-top: 94px;
+    padding-bottom: 94px;
+    justify-content: center;
 
     background-color: var(--secondary-bg-cl);
 }
 
 .card-set {
-    // display: flex;
+    display: flex;
+    flex-wrap: wrap;
     // margin-left: 0px;
     // margin-top: 0;
     // margin-bottom: 0;
     // padding: 0;
+    margin: -15px;
+
+    @include mq(tablet) {
+
+        // display: flex;
+        // flex-wrap: wrap;
+        
+        justify-content: center;
+
+    }
+
+    @include mq(desktop) {
+
+        // display: flex;
+        flex-wrap: nowrap;
+
+    }
+}
+
+.team-card {
     
+    // width: 270px;
+    // margin-right: 30px;
+    margin: 15px;
 
-    @media screen and (max-width: 767.98px) {
-        margin: -15px;
-        padding-top: 60px;
-        padding-bottom: 60px;
-        // display: block;
-        align-items: center;
-        justify-content: center;
+    background-color: var(--hero-txt-cl);
 
-        &:not(:last-child) {
-            margin-right: 30px;
-        } 
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+                0px 1px 1px rgba(0, 0, 0, 0.14),
+                0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+
+    // &:last-child {
+    //     margin-right: 0;
+    // }
+
+    @include mq(tablet) {
+    
+        // flex-basis: calc((100%-60px)/2);
+        width: 354px;
+
     }
 
-    @media screen and (min-width: 768px) and (max-width: 1199.98px) {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        flex-basis: calc(
-            (100%-2*30px)/2
-        );
-    }
+    @include mq(desktop) {
+        flex-basis: calc((100%-120px)/4);
 
-    @media screen and (min-width: 1200px) {
-        padding-top: 94px;
-        padding-bottom: 94px;
-        display: flex;
-        align-items: center;
-        justify-content: center;        
     }
+    
 }
 
 .member-group {
@@ -62,58 +79,7 @@
     margin-bottom: 50px;
 }
 
-.team-card {
-    // display: flex;
-    
-    
-    
-    // margin-right: 30px;
 
-    background-color: var(--hero-txt-cl);
-
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-                0px 1px 1px rgba(0, 0, 0, 0.14),
-                0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-
-    // &:last-child {
-    //     margin-right: 0;
-    // }
-
-    @media screen and (max-width: 767.98px) {
-        
-        margin: 15px;
-        
-        // display: block;
-        width: 450px;
-        height: 622px;
-
-        
-        // &:not(:last-child) {
-        //     margin-right: 30px;
-        // } 
-        
-    }
-
-    @media screen and (min-width: 768px) and (max-width: 1199.98px) { 
-
-        margin: 15px;
-
-        width: calc((100% - 2*30)/2);
-    }
-
-    @media screen and (min-width: 1200px) {
-        
-        margin-right: 30px;
-
-        width: 270px;
-
-        &:last-child {
-            margin-right: 0;
-        }
-        
-    }
-}
 
 .member-title {
     margin-bottom: 10px;
