--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,14 +1,14 @@
 /* -- HERO -- */
 
 .hero {
-    height: 600px;
+    height: 400px;
     max-width: 1600px;
 
     margin-left: auto;
     margin-right: auto;
     
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 118px;
+    padding-bottom: 118px;
          
     text-align: center;
     background-color: var(--dark-bg-cl);
@@ -17,35 +17,40 @@
     background-position: center;
     background-size: cover;
     
-    background-image: url(../../images/background/hero-s.jpg),
+    background-image: url(../images/background/hero-s.jpg),
     linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
     
     @include mq(retina) {
         background-image:
-        url(../../images/background/hero-s@2x.jpg),
+        url(../images/background/hero-s@2x.jpg),
         linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));        
     }
 
     @include mq(tablet) {
         background-image:
-        url(../../images/background/hero-m.jpg),
+        url(../images/background/hero-m.jpg),
         linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
 
         @include mq(retina) {        
             background-image:
-            url(../../images/background/hero-m@2x.jpg),
+            url(../images/background/hero-m@2x.jpg),
             linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
         }       
     }
     
     @include mq(desktop) {
+        height: 600px;
+
+        padding-top: 200px;
+        padding-bottom: 200px;
+
         background-image: 
-        url(../../images/background/hero-l.jpg),
+        url(../images/background/hero-l.jpg),
         linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
 
         @include mq(retina) {        
             background-image:
-            url(../../images/background/hero-l@2x.jpg),
+            url(../images/background/hero-l@2x.jpg),
             linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));            
         }        
     }
@@ -56,10 +61,23 @@
     margin-bottom: 30px;
 
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.62;
     letter-spacing: var(--ls-thirt);
     text-transform: uppercase;
     
     color: var(--hero-txt-cl);
+
+    // @include mq(tablet) {
+
+        
+
+    // }
+
+    @include mq(desktop) {
+
+        font-size: 44px;
+        line-height: 1.36;
+
+    }
 }
