--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -112,8 +112,18 @@
 /* ПОРТФОЛИО */
 
 .filter {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    
+    @media screen and (min-width: 480px) {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 
 .filter-list {
@@ -121,7 +131,7 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     margin-top: 0;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     padding-left: 0;
 
     list-style: none;
@@ -133,7 +143,7 @@
     }
 
     @include mq(desktop) {
-        
+        margin-bottom: 50px;
 
     }
 }
@@ -164,6 +174,8 @@
     transition: color var(--animation),
     background-color var(--animation),
     box-shadow var(--animation) ;
+
+    border: none;
 
     &:hover,
     &:focus {
